--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,13 @@ sklearn==0.0.post1
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.1
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.1
+tensorflow-addons==0.19.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.31.0
 terminado==0.17.0
 threadpoolctl==3.1.0
 tifffile==2022.10.10
